# localGPT

./: ingest.py  local_langchain_openai.py  local_mpt.py  pyproject.toml  run_localGPT.py
